export const snapshot = {};

snapshot[`call-trace debug_traceTransaction 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_callee_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002",
          position: "0x0",
          topics: [
            "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
          ],
        },
      ],
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x0",
    },
    {
      error: "execution reverted",
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0xd1b96663",
      output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
      revertReason: "This function always fails",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "<caller>",
  gas: "<string>",
  gasUsed: "<string>",
  input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
  logs: [
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
      position: "0x1",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
      position: "0x2",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
  ],
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace debug_deploy_traceTransaction 1`] = `
{
  from: "<caller>",
  gas: "<string>",
  gasUsed: "<string>",
  input: "<tracing_callee_init_code>",
  to: "<contract_callee_addr>",
  type: "CREATE",
  value: "0x0",
}
`;

snapshot[`call-trace debug_traceBlock 1`] = `
[
  {
    result: {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000002",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          calls: [
            {
              from: "<contract_addr>",
              gas: "<string>",
              gasUsed: "<string>",
              input: "0x",
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x2386f26fc10000",
            },
            {
              from: "<contract_addr>",
              gas: "<string>",
              gasUsed: "<string>",
              input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
              logs: [
                {
                  address: "<contract_callee_addr>",
                  data: "0x0000000000000000000000000000000000000000000000000000000000000001",
                  position: "0x0",
                  topics: [
                    "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
                  ],
                },
              ],
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x0",
            },
            {
              error: "execution reverted",
              from: "<contract_addr>",
              gas: "<string>",
              gasUsed: "<string>",
              input: "0xd1b96663",
              output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
              revertReason: "This function always fails",
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x2386f26fc10000",
            },
            {
              from: "<contract_addr>",
              gas: "<string>",
              gasUsed: "<string>",
              input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
              to: "<contract_addr>",
              type: "CALL",
              value: "0x0",
            },
          ],
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
              position: "0x1",
              topics: [
                "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
              ],
            },
            {
              address: "<contract_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
              position: "0x2",
              topics: [
                "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
              ],
            },
          ],
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<caller>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
    txHash: "<hash>",
  },
]
`;

snapshot[`call-trace debug_traceCall 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_callee_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002",
          position: "0x0",
          topics: [
            "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
          ],
        },
      ],
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x0",
    },
    {
      error: "execution reverted",
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0xd1b96663",
      output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
      revertReason: "This function always fails",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<string>",
  gasUsed: "<string>",
  input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
  logs: [
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
      position: "0x1",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
      position: "0x2",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
  ],
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace selfdestruct 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x",
      to: "0x0000000000000000000000000000000000000000",
      type: "SELFDESTRUCT",
      value: "<selfdestruct_value>",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<string>",
  gasUsed: "<string>",
  input: "0x2b68b9c6",
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace create_and_destruct 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "<tracing_callee_init_code>",
      output: "<tracing_callee_runtime_code>",
      to: "<addr>",
      type: "CREATE",
      value: "0x0",
    },
    {
      calls: [
        {
          from: "<addr>",
          gas: "<string>",
          gasUsed: "<string>",
          input: "0x",
          to: "<contract_addr>",
          type: "SELFDESTRUCT",
          value: "<selfdestruct_value>",
        },
      ],
      from: "<contract_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0x2b68b9c6",
      to: "<addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<string>",
  gasUsed: "<string>",
  input: "0xfadbb018",
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace delegatecall 1`] = `
{
  calls: [
    {
      from: "<pretrace_fixture_addr>",
      gas: "<string>",
      gasUsed: "<string>",
      input: "0xd09de08a",
      to: "<pretrace_fixture_child_addr>",
      type: "DELEGATECALL",
      value: "0x0",
    },
  ],
  from: "<caller>",
  gas: "<string>",
  gasUsed: "<string>",
  input: "0x23d43804000000000000000000000000<pretrace_fixture_child_addr>",
  to: "<pretrace_fixture_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`EVM opcode tracer: deploy flipper 1`] = `
{
  failed: false,
  gas: "<number>",
  returnValue: "0x6080604052348015600e575f5ffd5b5060043610603a575f3560e01c80632096525514603e5780633fa4f245146058578063cde4efa9146072575b5f5ffd5b6044607a565b604051604f919060df565b60405180910390f35b605e608e565b6040516069919060df565b60405180910390f35b6078609f565b005b5f5f5f9054906101000a900460ff16905090565b5f5f9054906101000a900460ff1681565b5f5f9054906101000a900460ff16155f5f6101000a81548160ff021916908315150217905550565b5f8115159050919050565b60d98160c7565b82525050565b5f60208201905060f05f83018460d2565b9291505056fea2646970667358221220bba63d297a7f7ca3762bda36b1927da1525c30bedb785cf246426272bd00979364736f6c634300081e0033",
  structLogs: [
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 0,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 2,
      stack: [
        "0x80",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "MSTORE",
      pc: 4,
      stack: [
        "0x80",
        "0x40",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "CALLVALUE",
      pc: 5,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP1",
      pc: 6,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 7,
      stack: [
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 8,
      stack: [
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPI",
      pc: 10,
      stack: [
        "0x0",
        "0x1",
        "0xe",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPDEST",
      pc: 14,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "POP",
      pc: 15,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 16,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 18,
      stack: [
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 19,
      stack: [
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH2",
      pc: 20,
      stack: [
        "0x1",
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "EXP",
      pc: 23,
      stack: [
        "0x1",
        "0x0",
        "0x0",
        "0x100",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP2",
      pc: 24,
      stack: [
        "0x1",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SLOAD",
      pc: 25,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
      ],
      storage: {
        "0000000000000000000000000000000000000000000000000000000000000000": "0000000000000000000000000000000000000000000000000000000000000000",
      },
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP2",
      pc: 26,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 27,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "MUL",
      pc: 29,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
        "0x1",
        "0xff",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "NOT",
      pc: 30,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
        "0xff",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "AND",
      pc: 31,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
        "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff00",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 32,
      stack: [
        "0x1",
        "0x0",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP4",
      pc: 33,
      stack: [
        "0x1",
        "0x0",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 34,
      stack: [
        "0x1",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 35,
      stack: [
        "0x1",
        "0x0",
        "0x0",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "MUL",
      pc: 36,
      stack: [
        "0x1",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "OR",
      pc: 37,
      stack: [
        "0x1",
        "0x0",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 38,
      stack: [
        "0x1",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SSTORE",
      pc: 39,
      stack: [
        "0x1",
        "0x1",
        "0x0",
      ],
      storage: {
        "0000000000000000000000000000000000000000000000000000000000000000": "0000000000000000000000000000000000000000000000000000000000000001",
      },
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "POP",
      pc: 40,
      stack: [
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH2",
      pc: 41,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP1",
      pc: 44,
      stack: [
        "0x12c",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH2",
      pc: 45,
      stack: [
        "0x12c",
        "0x12c",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 48,
      stack: [
        "0x12c",
        "0x12c",
        "0x35",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "CODECOPY",
      pc: 49,
      stack: [
        "0x12c",
        "0x12c",
        "0x35",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 50,
      stack: [
        "0x12c",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "RETURN",
      pc: 51,
      stack: [
        "0x12c",
        "0x0",
      ],
    },
  ],
}
`;

snapshot[`EVM opcode tracer: flip 1`] = `
{
  failed: false,
  gas: "<number>",
  returnValue: "0x",
  structLogs: [
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 0,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 2,
      stack: [
        "0x80",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "MSTORE",
      pc: 4,
      stack: [
        "0x80",
        "0x40",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "CALLVALUE",
      pc: 5,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP1",
      pc: 6,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 7,
      stack: [
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 8,
      stack: [
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPI",
      pc: 10,
      stack: [
        "0x0",
        "0x1",
        "0xe",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPDEST",
      pc: 14,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "POP",
      pc: 15,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 16,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "CALLDATASIZE",
      pc: 18,
      stack: [
        "0x4",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "LT",
      pc: 19,
      stack: [
        "0x4",
        "0x4",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 20,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPI",
      pc: 22,
      stack: [
        "0x0",
        "0x3a",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 23,
      stack: [],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "CALLDATALOAD",
      pc: 24,
      stack: [
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 25,
      stack: [
        "0xcde4efa900000000000000000000000000000000000000000000000000000000",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SHR",
      pc: 27,
      stack: [
        "0xcde4efa900000000000000000000000000000000000000000000000000000000",
        "0xe0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP1",
      pc: 28,
      stack: [
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH4",
      pc: 29,
      stack: [
        "0xcde4efa9",
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "EQ",
      pc: 34,
      stack: [
        "0xcde4efa9",
        "0xcde4efa9",
        "0x20965255",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 35,
      stack: [
        "0xcde4efa9",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPI",
      pc: 37,
      stack: [
        "0xcde4efa9",
        "0x0",
        "0x3e",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP1",
      pc: 38,
      stack: [
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH4",
      pc: 39,
      stack: [
        "0xcde4efa9",
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "EQ",
      pc: 44,
      stack: [
        "0xcde4efa9",
        "0xcde4efa9",
        "0x3fa4f245",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 45,
      stack: [
        "0xcde4efa9",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPI",
      pc: 47,
      stack: [
        "0xcde4efa9",
        "0x0",
        "0x58",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP1",
      pc: 48,
      stack: [
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH4",
      pc: 49,
      stack: [
        "0xcde4efa9",
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "EQ",
      pc: 54,
      stack: [
        "0xcde4efa9",
        "0xcde4efa9",
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 55,
      stack: [
        "0xcde4efa9",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPI",
      pc: 57,
      stack: [
        "0xcde4efa9",
        "0x1",
        "0x72",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPDEST",
      pc: 114,
      stack: [
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 115,
      stack: [
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 117,
      stack: [
        "0xcde4efa9",
        "0x78",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMP",
      pc: 119,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x9f",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPDEST",
      pc: 159,
      stack: [
        "0xcde4efa9",
        "0x78",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 160,
      stack: [
        "0xcde4efa9",
        "0x78",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 161,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 162,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SLOAD",
      pc: 163,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
      ],
      storage: {
        "0000000000000000000000000000000000000000000000000000000000000000": "0000000000000000000000000000000000000000000000000000000000000001",
      },
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 164,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH2",
      pc: 165,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "EXP",
      pc: 168,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
        "0x0",
        "0x100",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 169,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DIV",
      pc: 170,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 171,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "AND",
      pc: 173,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
        "0xff",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 174,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 175,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH0",
      pc: 176,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH2",
      pc: 177,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "EXP",
      pc: 180,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
        "0x100",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP2",
      pc: 181,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SLOAD",
      pc: 182,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x0",
      ],
      storage: {
        "0000000000000000000000000000000000000000000000000000000000000000": "0000000000000000000000000000000000000000000000000000000000000001",
      },
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP2",
      pc: 183,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "PUSH1",
      pc: 184,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "MUL",
      pc: 186,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
        "0x1",
        "0xff",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "NOT",
      pc: 187,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
        "0xff",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "AND",
      pc: 188,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
        "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff00",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 189,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "DUP4",
      pc: 190,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 191,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "ISZERO",
      pc: 192,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
        "0x1",
        "0x1",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "MUL",
      pc: 193,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
        "0x1",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "OR",
      pc: 194,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SWAP1",
      pc: 195,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "SSTORE",
      pc: 196,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
        "0x0",
        "0x0",
      ],
      storage: {
        "0000000000000000000000000000000000000000000000000000000000000000": "0000000000000000000000000000000000000000000000000000000000000000",
      },
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "POP",
      pc: 197,
      stack: [
        "0xcde4efa9",
        "0x78",
        "0x0",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMP",
      pc: 198,
      stack: [
        "0xcde4efa9",
        "0x78",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "JUMPDEST",
      pc: 120,
      stack: [
        "0xcde4efa9",
      ],
    },
    {
      depth: 1,
      gas: "<number>",
      gasCost: "<number>",
      op: "STOP",
      pc: 121,
      stack: [
        "0xcde4efa9",
      ],
    },
  ],
}
`;

snapshot[`prestate deploy_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate deploy_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
}
`;

snapshot[`prestate write_storage.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x00000000000000000000000000000000000000000000000000000000000007e9",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167650000000000000000000000000000000000001a",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate write_storage.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
    },
  },
}
`;

snapshot[`prestate write_storage_from_0.diff 1`] = `
{
  post: {
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f66726f6d5f30000000000000000000000028",
      },
    },
  },
  pre: {
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate write_storage_from_0.no_diff 1`] = `
{
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
    },
  },
}
`;

snapshot[`prestate read_storage.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate read_storage.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
    },
  },
}
`;

snapshot[`prestate deposit.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      storage: {
        "<wallet_balance>": "0x00000000000000000000000000000000000000000000000098a7d9b8314c0000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
}
`;

snapshot[`prestate deposit.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
    },
  },
}
`;

snapshot[`prestate withdraw.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      storage: {
        "<wallet_balance>": "0x00000000000000000000000000000000000000000000000098a7d9b8314c0000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
}
`;

snapshot[`prestate withdraw.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
    },
  },
}
`;

snapshot[`prestate get_balance.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate get_balance.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
}
`;

snapshot[`prestate get_external_balance.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate get_external_balance.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_child_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
}
`;

snapshot[`prestate instantiate_child.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate instantiate_child.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
}
`;

snapshot[`prestate call_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
    "<prestate_contract_child_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000002",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_child_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000001",
      },
    },
  },
}
`;

snapshot[`prestate call_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_child_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000001",
    },
  },
}
`;

snapshot[`prestate delegate_call_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      },
    },
  },
}
`;

snapshot[`prestate delegate_call_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
    },
  },
  "<prestate_contract_child_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
}
`;

snapshot[`prestate trace_block_write_storage_twice.diff 1`] = `
[
  {
    result: {
      post: {
        "<caller_addr>": {
          balance: "<string>",
          nonce: "<number>",
        },
        "<prestate_contract_addr>": {
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
            "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
          },
        },
      },
      pre: {
        "<caller_addr>": {
          balance: "<string>",
          nonce: "<number>",
        },
        "<prestate_contract_addr>": {
          balance: "<string>",
          code: "<string>",
          nonce: "<number>",
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
            "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
          },
        },
      },
    },
    txHash: "<string>",
  },
  {
    result: {
      post: {
        "<caller_addr>": {
          balance: "<string>",
          nonce: "<number>",
        },
        "<prestate_contract_addr>": {
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
          },
        },
      },
      pre: {
        "<caller_addr>": {
          balance: "<string>",
          nonce: "<number>",
        },
        "<prestate_contract_addr>": {
          balance: "<string>",
          code: "<string>",
          nonce: "<number>",
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
          },
        },
      },
    },
    txHash: "<string>",
  },
]
`;

snapshot[`prestate trace_tx_write_storage_twice.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<string>",
      nonce: "<number>",
    },
    "<prestate_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate trace_block_write_storage_twice.no_diff 1`] = `
[
  {
    result: {
      "<caller_addr>": {
        balance: "<string>",
        nonce: "<number>",
      },
      "<prestate_contract_addr>": {
        balance: "<string>",
        code: "<string>",
        nonce: "<number>",
        storage: {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
          "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
        },
      },
    },
    txHash: "<string>",
  },
  {
    result: {
      "<caller_addr>": {
        balance: "<string>",
        nonce: "<number>",
      },
      "<prestate_contract_addr>": {
        balance: "<string>",
        code: "<string>",
        nonce: "<number>",
        storage: {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002d",
          "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
        },
      },
    },
    txHash: "<string>",
  },
]
`;

snapshot[`prestate trace_tx_write_storage_twice.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<string>",
    nonce: "<number>",
  },
  "<prestate_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
    },
  },
}
`;

snapshot[`prestate selfdestruct.diff 1`] = `
{
  post: {
    "<tracing_contract_addr>": {
      balance: "<string>",
    },
  },
  pre: {
    "<tracing_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate selfdestruct.no_diff 1`] = `
{
  "<tracing_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
}
`;

snapshot[`prestate create_and_destruct.diff 1`] = `
{
  post: {
    "<tracing_contract_addr>": {
      nonce: "<number>",
    },
  },
  pre: {
    "<tracing_contract_addr>": {
      balance: "<string>",
      code: "<string>",
      nonce: "<number>",
    },
  },
}
`;

snapshot[`prestate create_and_destruct.no_diff 1`] = `
{
  "<tracing_contract_addr>": {
    balance: "<string>",
    code: "<string>",
    nonce: "<number>",
  },
}
`;
